environments/prod/frontend/service-dir-ai-dashboard-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: dir-ai-dashboard
    app.kubernetes.io/part-of: dai-run
  name: dir-ai-dashboard-svc
  namespace: dir-frontend-ns
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: dir-ai-dashboard
  sessionAffinity: None
  type: ClusterIP
