environments/prod/frontend/service-dir-frontend-preview-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: dir-frontend
    app.kubernetes.io/part-of: dai-run
    dairun.io/role: preview
  name: dir-frontend-preview-svc
  namespace: dir-frontend-ns
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: dir-frontend
  sessionAffinity: None
  type: ClusterIP
