environments/prod/frontend/httproute-dir-ai-dashboard.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dir-ai-dashboard
  namespace: dir-frontend-ns
  labels:
    app.kubernetes.io/name: dir-ai-dashboard
    app.kubernetes.io/part-of: dai-run
spec:
  parentRefs:
    - name: dir-public-gateway
      namespace: dir-istio-ingress
      sectionName: https-root
  hostnames:
    - dashboard.dairun.site
  rules:
    - backendRefs:
        - name: dir-ai-dashboard-svc
          port: 3000
