environments/prod/frontend/httproute-dir-frontend-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/part-of: dai-run
  name: dir-frontend-route
  namespace: dir-frontend-ns
spec:
  hostnames:
  - dairun.site
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: dir-public-gateway
    namespace: dir-istio-ingress
    sectionName: https-root
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: dir-public-gateway
    namespace: dir-istio-ingress
    sectionName: http
  rules:
  - backendRefs:
    - group: ''
      kind: Service
      name: dir-frontend-svc
      port: 3000
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
